# my_new_ci_cd_pipeline

./: LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/actions/validate/: action.yml
.github/workflows/: on_before_merge.yml  on_feature_branch_change.yml  on_merge_to_main.yml  on_pr_change.yml
some_app/: main.py
