[tool.poetry]
name = "my-new-ci-cd-pipeline"
version = "0.1.0"
description = ""
authors = ["csaxton-ls <craig.saxton@legitscript.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
